third_party/move/move-compiler-v2/tests/checking/utf8-comment/utf-8-bad-constant-string.move
address 0x42 {
    module M1 {
        fun u(): u64 { 0 }
       const C: vector<u8> = "abc 这个是代码注释";
    }
}
